# rgeos

./: ChangeLog  DESCRIPTION  LICENSE.note  MD5  NAMESPACE  NEWS.md  configure  configure.ac  configure.in
R/: AAA.R  Rgpc_funcs.R  bbox2SP.R  gpc_geos.R  labelpt.R  over.R  rgeos_buffer.R  rgeos_linearref.R  rgeos_misc.R  rgeos_predicate_binary.R  rgeos_predicate_unary.R  rgeos_spExtensions_Classes.R  rgeos_spExtensions_Methods.R  rgeos_topology.R  rgeos_topology_binary.R  rgeos_util.R  rgeos_wkt.R
inst/: ChangeLog  README.windows  SVN_VERSION
inst/test_cases/: OverlayNG_test_a.rds  OverlayNG_test_b.rds  OverlayNG_test_c.rds
inst/tests/: test-jts-xml.R  test-translate-empty.R  test-translate-polygon-collection.R  test-translate-polygons.R  test-translate.R
inst/tests/testxml/general/: TestFunctionLA.xml  TestFunctionLL.xml  TestSimple.xml  TestValid2.xml
inst/tests/testxml/validate/: TestRelatePP.xml
inst/wkts/: nc34.wkt
man/: bbox2SP.Rd  bbox2SP.rd  class-Ring.Rd  class-SpatialCollections.Rd  class-SpatialRings.Rd  class-SpatialRingsDataFrame.Rd  class-gpc.poly.Rd  class-gpc.poly.nohole.Rd  comment-functions.Rd  constructor-SpatialCollections.Rd  constructor-SpatialRings.Rd  experimental-functions.Rd  gpc-new-generics.Rd  labelpt.Rd  linref-gInterpolate.Rd  linref-gProject.Rd  misc-gArea.Rd  misc-gBuffer.Rd  misc-gDistance.Rd  misc-gLength.Rd  misc-gNearestPoints.Rd  misc-over.Rd  pred-binary-gContains.Rd  pred-binary-gCrosses.Rd  pred-binary-gEquals.Rd  pred-binary-gIntersects.Rd  pred-binary-gRelate.Rd  pred-binary-gTouches.Rd  pred-unary-gIsEmpty.Rd  pred-unary-gIsRing.Rd  pred-unary-gIsSimple.Rd  pred-unary-gIsValid.Rd  rgeos-deprecated.Rd  topo-bin-gDifference.Rd  topo-bin-gIntersection.Rd  topo-bin-gSymdifference.Rd  topo-bin-gUnion.Rd  topo-unary-gBoundary.Rd  topo-unary-gCentroid.Rd  topo-unary-gConvexHull.Rd  (+12 more)
src/: Makevars  Makevars.in  Makevars.ucrt  Makevars.win  gpc_geos.c  init.c  local_stubs.c  rgeos.c  rgeos.h  rgeos_R2geos.c  rgeos_R2geosMP.c  rgeos_bbox.c  rgeos_buffer.c  rgeos_coord.c  rgeos_geos2R.c  rgeos_linearref.c  rgeos_misc.c  rgeos_poly2nb.c  rgeos_predicate_binary.c  rgeos_predicate_unary.c  rgeos_topology.c  rgeos_topology_binary.c  rgeos_validate.c  rgeos_wkt.c  symbols.rds
tests/: DP_simplify.R  DP_simplify.Rout.save  leak_by_exception.Rout.save  test-all.R
tests/testthat/: test-linearref.R  test-misc.R
tests/testthat/testxml/general/: TestBoundary.xml  TestFunctionLLPrec.xml  TestFunctionPP.xml  TestInteriorPoint.xml  TestValid.xml
tests/testthat/testxml/robust/: ExternalRobustness.xml
tests/testthat/testxml/validate/: TestRelateLL.xml  TestRelatePA.xml  TestRelatePL.xml
tools/: winlibs.R
