dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/rgeos.c)

GEOS_CONFIG="geos-config"

AC_ARG_WITH([geos-config],
    AC_HELP_STRING([--with-geos-config=GEOS_CONFIG],
           [the location of geos-config]),
           [geos_config=$withval])
if test [ -n "$geos_config" ] ; then
    AC_SUBST([GEOS_CONFIG],["${geos_config}"])
fi
echo "geos-config: ${GEOS_CONFIG}"
if test `${GEOS_CONFIG} --version`;
then

	PKG_CPPFLAGS=`${GEOS_CONFIG} --cflags`
	PKG_LIBS=`${GEOS_CONFIG} --libs`

else

	echo "Error: geos-config not found"
	echo "The geos-config script distributed with GEOS could not be found."
	echo "If you have not installed the GEOS libraries, you can"
	echo "download the source from  http://http://trac.osgeo.org/geos/"
	echo "If you have installed the GEOS libraries, then make sure that"
	echo "geos-config is in your path. Try typing geos-config at a"
	echo "shell prompt and see if it runs. If not, use:"
	echo " --configure-args='--with-geos-config=/usr/local/bin/geos-config'"	echo "with appropriate values for your installation."
	echo ""

	exit 1

fi

GEOS_VER=`${GEOS_CONFIG} --version`
echo "GEOS: $GEOS_VER"
GEOS_VER_DOT=`echo $GEOS_VER | tr -d "."`
if test ${GEOS_VER_DOT} -lt 322 ; then
    echo "Error: GEOS version less than 3.2.2"
    echo "Upgrade GEOS to at least 3.2.2"

    exit 1
fi
if test ${GEOS_VER_DOT} -gt 322 ; then
  AC_SUBST([PKG_CPPFLAGS],["-DHAVEUNARYUNION ${PKG_CPPFLAGS}"])
fi
echo "CPPFLAGS: $PKG_CPPFLAGS"
AC_SUBST(PKG_CPPFLAGS)
echo "LIBS: $PKG_LIBS"
AC_SUBST(PKG_LIBS)

if test -e ".svn" ; then
  svnversion -n > inst/SVN_VERSION
fi

AC_OUTPUT(src/Makevars)

